--- a/alacritty/font_blex_mono_NF.yml
+++ b/alacritty/font_blex_mono_NF.yml
@@ -6,11 +6,18 @@ font:
   bold:
     family: "BlexMono Nerd Font"
     style: SemiBold
+  italic:
+    family: "BlexMono Nerd Font"
+    style: Italic
+  bold_italic:
+    family: "BlexMono Nerd Font"
+    style: SemiBold Italic
+
   size: 14.0
 
   offset:
     x: 0
-    y: 0
+    y: 1
   glyph_offset:
     x: 0
     y: 0
