--- a/alacritty/font_hack_NF.yml
+++ b/alacritty/font_hack_NF.yml
@@ -1,16 +1,16 @@
 # Font settings
 font:
   normal:
-    family: "FiraCode Nerd Font"
+    family: "Hack Nerd Font"
     style: Regular
   bold:
-    family: "FiraCode Nerd Font"
+    family: "Hack Nerd Font"
     style: Bold
   italic:
-    family: "RobotoMono Nerd Font"
+    family: "Hack Nerd Font"
     style: Italic
   bold_italic:
-    family: "RobotoMono Nerd Font"
+    family: "Hack Nerd Font"
     style: Bold Italic
 
   size: 14.0
