--- a/alacritty/font_iosevka_NF.yml
+++ b/alacritty/font_iosevka_NF.yml
@@ -1,19 +1,19 @@
 # Font settings
 font:
   normal:
-    family: "FiraCode Nerd Font"
+    family: "Iosevka Nerd Font"
     style: Regular
   bold:
-    family: "FiraCode Nerd Font"
+    family: "Iosevka Nerd Font"
     style: Bold
   italic:
-    family: "RobotoMono Nerd Font"
-    style: Italic
+    family: "Iosevka Nerd Font"
+    style: Oblique
   bold_italic:
-    family: "RobotoMono Nerd Font"
-    style: Bold Italic
+    family: "Iosevka Nerd Font"
+    style: Bold Oblique
 
-  size: 14.0
+  size: 14.5
 
   offset:
     x: 0
