--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -1,59 +1,10 @@
-# Filepath: ~/.config/alacritty/alacritty.yml or ~/.alacritty.yml
+# Path: ~/.config/alacritty/alacritty.yml (or ~/.alacritty.yml)
 # Author: Dan Murphy
-
-# Configuration for the Alacritty terminal emulator.
-# For a template describing all settings, see
-#   https://github.com/alacritty/alacritty/blob/master/alacritty.yml
-
 
 live_config_reload: true
 
-
 # Fonts ································································· {{{1
-# Standard Fonts ························································ {{{2
 font_schemes:
-
-  # Cascadia Code {{{3
-  cascadia_code: &cascadia_code
-    normal:
-      family: "Cascadia Code"
-      style: SemiLight
-    bold:
-      family: "Cascadia Code"
-      style: SemiBold
-    size: 14.0
-    offset:
-      x: 0
-      y: 0
-    glyph_offset:
-      x: 0
-      y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
-
-  # Courier {{{3
-  courier: &courier
-    normal:
-      family: "Courier"
-      style: Regular
-    bold:
-      family: "Courier"
-      style: Bold
-    italic:
-      family: "Courier"
-      style: Oblique
-    bold_italic:
-      family: "Courier"
-      style: Bold Oblique
-    size: 14.0
-    offset:
-      x: 0
-      y: 0
-    glyph_offset:
-      x: 0
-      y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
 
   # Fantasque Sans Mono {{{3
   fantasque_sans_mono: &fantasque_sans_mono
@@ -76,8 +27,6 @@ font_schemes:
     glyph_offset:
       x: 0
       y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
 
   # Fira Code {{{3
   fira_code: &fira_code
@@ -94,8 +43,6 @@ font_schemes:
     glyph_offset:
       x: 0
       y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
 
   # Hack {{{3
   hack: &hack
@@ -118,8 +65,6 @@ font_schemes:
     glyph_offset:
       x: 0
       y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
 
   # IBM Plex Mono {{{3
   ibm_plex_mono: &ibm_plex_mono
@@ -142,8 +87,6 @@ font_schemes:
     glyph_offset:
       x: 0
       y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
 
   # Iosevka {{{3
   iosevka: &iosevka
@@ -166,8 +109,6 @@ font_schemes:
     glyph_offset:
       x: 0
       y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
 
   # JetBrains Mono {{{3
   jetbrains_mono: &jetbrains_mono
@@ -190,8 +131,6 @@ font_schemes:
     glyph_offset:
       x: 0
       y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
 
   # Meslo LG {{{3
   meslo_lg: &meslo_lg
@@ -214,8 +153,6 @@ font_schemes:
     glyph_offset:
       x: 0
       y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
 
   # Roboto Mono {{{3
   roboto_mono: &roboto_mono
@@ -238,8 +175,6 @@ font_schemes:
     glyph_offset:
       x: 0
       y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
 
   # Source Code Pro {{{3
   source_code_pro: &source_code_pro
@@ -262,249 +197,10 @@ font_schemes:
     glyph_offset:
       x: 0
       y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
-
-# NERD Fonts ···························································· {{{2
-font_schemes_NF:
-
-  # Blex Mono Nerd Font {{{3
-  blex_mono_NF: &blex_mono_NF
-    normal:
-      family: "BlexMono Nerd Font"
-      style: Text
-    bold:
-      family: "BlexMono Nerd Font"
-      style: SemiBold
-    italic:
-      family: "BlexMono Nerd Font"
-      style: Italic
-    bold_italic:
-      family: "BlexMono Nerd Font"
-      style: SemiBold Italic
-    size: 14.0
-    offset:
-      x: 0
-      y: 1
-    glyph_offset:
-      x: 0
-      y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
-
-  # Fira Code Nerd Font {{{3
-  fira_code_NF: &fira_code_NF
-    normal:
-      family: "FiraCode Nerd Font"
-      style: Regular
-    bold:
-      family: "FiraCode Nerd Font"
-      style: Bold
-    size: 14.0
-    offset:
-      x: 0
-      y: 2
-    glyph_offset:
-      x: 0
-      y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
-
-  # Hack Nerd Font {{{3
-  hack_NF: &hack_NF
-    normal:
-      family: "Hack Nerd Font"
-      style: Regular
-    bold:
-      family: "Hack Nerd Font"
-      style: Bold
-    italic:
-      family: "Hack Nerd Font"
-      style: Italic
-    bold_italic:
-      family: "Hack Nerd Font"
-      style: Bold Italic
-    size: 14.0
-    offset:
-      x: 0
-      y: 2
-    glyph_offset:
-      x: 0
-      y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
-
-  # Iosevka Nerd Font {{{3
-  iosevka_NF: &iosevka_NF
-    normal:
-      family: "Iosevka Nerd Font"
-      style: Regular
-    bold:
-      family: "Iosevka Nerd Font"
-      style: Bold
-    italic:
-      family: "Iosevka Nerd Font"
-      style: Oblique
-    bold_italic:
-      family: "Iosevka Nerd Font"
-      style: Bold Oblique
-    size: 14.5
-    offset:
-      x: 0
-      y: 2
-    glyph_offset:
-      x: 0
-      y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
-
-  # Roboto Mono Nerd Font {{{3
-  roboto_mono_NF: &roboto_mono_NF
-    normal:
-      family: "RobotoMono Nerd Font"
-      style: Regular
-    bold:
-      family: "RobotoMono Nerd Font"
-      style: Bold
-    italic:
-      family: "RobotoMono Nerd Font"
-      style: Italic
-    bold_italic:
-      family: "RobotoMono Nerd Font"
-      style: Bold Italic
-    size: 14.0
-    offset:
-      x: 0
-      y: 2
-    glyph_offset:
-      x: 0
-      y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
-
-  # Sauce Code Pro Nerd Font {{{3
-  sauce_code_pro_NF: &sauce_code_pro_NF
-    normal:
-      family: "SauceCodePro Nerd Font"
-      style: Regular
-    bold:
-      family: "SauceCodePro Nerd Font"
-      style: Semibold
-    italic:
-      family: "SauceCodePro Nerd Font"
-      style: Italic
-    bold_italic:
-      family: "SauceCodePro Nerd Font"
-      style: Semibold Italic
-    size: 14.0
-    offset:
-      x: 0
-      y: 0
-    glyph_offset:
-      x: 0
-      y: 0
-    # Thin-stroke font rendering (macOS only)
-    use_thin_strokes: true
 
 
 # Colors ································································ {{{1
 color_schemes:
-
-  # Edge Dark (default) {{{2
-  edge_dark_default: &edge_dark_default
-    primary:
-      background: "0x2c2e34"
-      foreground: "0xc5cdd9"
-    normal:
-      black: "0x3e4249"
-      red: "0xec7279"
-      green: "0xa0c980"
-      yellow: "0xdeb974"
-      blue: "0x6cb6eb"
-      magenta: "0xd38aea"
-      cyan: "0x5dbbc1"
-      white: "0xc5cdd9"
-    bright:
-      black: "0x3e4249"
-      red: "0xec7279"
-      green: "0xa0c980"
-      yellow: "0xdeb974"
-      blue: "0x6cb6eb"
-      magenta: "0xd38aea"
-      cyan: "0x5dbbc1"
-      white: "0xc5cdd9"
-
-  # Edge Dark (Aura) {{{2
-  edge_dark_aura: &edge_dark_aura
-    primary:
-      background: "0x2b2d37"
-      foreground: "0xc5cdd9"
-    normal:
-      black: "0x363a49"
-      red: "0xec7279"
-      green: "0xa0c980"
-      yellow: "0xdeb974"
-      blue: "0x6cb6eb"
-      magenta: "0xd38aea"
-      cyan: "0x5dbbc1"
-      white: "0xc5cdd9"
-    bright:
-      black: "0x363a49"
-      red: "0xec7279"
-      green: "0xa0c980"
-      yellow: "0xdeb974"
-      blue: "0x6cb6eb"
-      magenta: "0xd38aea"
-      cyan: "0x5dbbc1"
-      white: "0xc5cdd9"
-
-  # Edge Dark (Neon) {{{2
-  edge_dark_neon: &edge_dark_neon
-    primary:
-      background: "0x2b2d3a"
-      foreground: "0xc5cdd9"
-    normal:
-      black: "0x363a4e"
-      red: "0xec7279"
-      green: "0xa0c980"
-      yellow: "0xdeb974"
-      blue: "0x6cb6eb"
-      magenta: "0xd38aea"
-      cyan: "0x5dbbc1"
-      white: "0xc5cdd9"
-    bright:
-      black: "0x363a4e"
-      red: "0xec7279"
-      green: "0xa0c980"
-      yellow: "0xdeb974"
-      blue: "0x6cb6eb"
-      magenta: "0xd38aea"
-      cyan: "0x5dbbc1"
-      white: "0xc5cdd9"
-
-  # Edge Light {{{2
-  edge_light: &edge_light
-    primary:
-      background: "0xfafafa"
-      foreground: "0x4b505b"
-    normal:
-      black: "0x4b505b"
-      red: "0xd05858"
-      green: "0x608e32"
-      yellow: "0xbe7e05"
-      blue: "0x5079be"
-      magenta: "0xb05ccc"
-      cyan: "0x3a8b84"
-      white: "0xfafafa"
-    bright:
-      black: "0x4b505b"
-      red: "0xd05858"
-      green: "0x608e32"
-      yellow: "0xbe7e05"
-      blue: "0x5079be"
-      magenta: "0xb05ccc"
-      cyan: "0x3a8b84"
-      white: "0xfafafa"
 
   # Nord {{{2
   nord: &nord
@@ -582,180 +278,6 @@ color_schemes:
       magenta: '0xc678dd'
       cyan:    '0x56b6c2'
       white:   '0x3e4452'
-
-  # Solarized Dark {{{2
-  solarized_dark: &solarized_dark
-    primary:
-      background: '0x002b36' # base03
-      foreground: '0x839496' # base0
-    cursor:
-      text:   '0x002b36' # base03
-      cursor: '0x839496' # base0
-    normal:
-      black:   '0x073642' # base02
-      red:     '0xdc322f' # red
-      green:   '0x859900' # green
-      yellow:  '0xb58900' # yellow
-      blue:    '0x268bd2' # blue
-      magenta: '0xd33682' # magenta
-      cyan:    '0x2aa198' # cyan
-      white:   '0xeee8d5' # base2
-    bright:
-      black:   '0x002b36' # base03
-      red:     '0xcb4b16' # orange
-      green:   '0x586e75' # base01
-      yellow:  '0x657b83' # base00
-      blue:    '0x839496' # base0
-      magenta: '0x6c71c4' # violet
-      cyan:    '0x93a1a1' # base1
-      white:   '0xfdf6e3' # base3
-
-  # Solarized Light {{{2
-  solarized_light: &solarized_light
-    primary:
-      background: '0xfdf6e3' # base3
-      foreground: '0x657b83' # base00
-    cursor:
-      text:   '0xfdf6e3' # base3
-      cursor: '0x657b83' # base00
-    normal:
-      black:   '0x073642' # base02
-      red:     '0xdc322f' # red
-      green:   '0x859900' # green
-      yellow:  '0xb58900' # yellow
-      blue:    '0x268bd2' # blue
-      magenta: '0xd33682' # magenta
-      cyan:    '0x2aa198' # cyan
-      white:   '0xeee8d5' # base2
-    bright:
-      black:   '0x002b36' # base03
-      red:     '0xcb4b16' # orange
-      green:   '0x586e75' # base01
-      yellow:  '0x657b83' # base00
-      blue:    '0x839496' # base0
-      magenta: '0x6c71c4' # violet
-      cyan:    '0x93a1a1' # base1
-      white:   '0xfdf6e3' # base3
-
-  # Sonokai (default) {{{2
-  sonokai_default: &sonokai_default
-    primary:
-      background: "0x2c2e34"
-      foreground: "0xe2e2e3"
-    normal:
-      black: "0x181819"
-      red: "0xfc5d7c"
-      green: "0x9ed072"
-      yellow: "0xe7c664"
-      blue: "0x76cce0"
-      magenta: "0xb39df3"
-      cyan: "0xf39660"
-      white: "0xe2e2e3"
-    bright:
-      black: "0x181819"
-      red: "0xfc5d7c"
-      green: "0x9ed072"
-      yellow: "0xe7c664"
-      blue: "0x76cce0"
-      magenta: "0xb39df3"
-      cyan: "0xf39660"
-      white: "0xe2e2e3"
-
-  # Sonokai (Andromeda) {{{2
-  sonokai_andromeda: &sonokai_andromeda
-    primary:
-      background: "0x2b2d3a"
-      foreground: "0xe1e3e4"
-    normal:
-      black: "0x181a1c"
-      red: "0xfb617e"
-      green: "0x9ed06c"
-      yellow: "0xedc763"
-      blue: "0x6dcae8"
-      magenta: "0xbb97ee"
-      cyan: "0xf89860"
-      white: "0xe1e3e4"
-    bright:
-      black: "0x181a1c"
-      red: "0xfb617e"
-      green: "0x9ed06c"
-      yellow: "0xedc763"
-      blue: "0x6dcae8"
-      magenta: "0xbb97ee"
-      cyan: "0xf89860"
-      white: "0xe1e3e4"
-
-  # Sonokai (Atlantis) {{{2
-  sonokia_atlantis: &sonokia_atlantis
-    primary:
-      background: "0x2a2f38"
-      foreground: "0xe1e3e4"
-    normal:
-      black: "0x181a1c"
-      red: "0xff6578"
-      green: "0x9dd274"
-      yellow: "0xeacb64"
-      blue: "0x72cce8"
-      magenta: "0xba9cf3"
-      cyan: "0xf69c5e"
-      white: "0xe1e3e4"
-    bright:
-      black: "0x181a1c"
-      red: "0xff6578"
-      green: "0x9dd274"
-      yellow: "0xeacb64"
-      blue: "0x72cce8"
-      magenta: "0xba9cf3"
-      cyan: "0xf69c5e"
-      white: "0xe1e3e4"
-
-  # Sonokai (Maia) {{{2
-  sonokai_maia: &sonokai_maia
-    primary:
-      background: "0x273136"
-      foreground: "0xe1e2e3"
-    normal:
-      black: "0x1c1e1f"
-      red: "0xf76c7c"
-      green: "0x9cd57b"
-      yellow: "0xe3d367"
-      blue: "0x78cee9"
-      magenta: "0xbaa0f8"
-      cyan: "0xf3a96a"
-      white: "0xe1e2e3"
-    bright:
-      black: "0x1c1e1f"
-      red: "0xf76c7c"
-      green: "0x9cd57b"
-      yellow: "0xe3d367"
-      blue: "0x78cee9"
-      magenta: "0xbaa0f8"
-      cyan: "0xf3a96a"
-      white: "0xe1e2e3"
-
-  # Sonokai (Shusia) {{{2
-  sonokai_shusia: &sonokai_shusia
-    primary:
-      background: "0x2d2a2e"
-      foreground: "0xe3e1e4"
-    normal:
-      black: "0x1a181a"
-      red: "0xf85e84"
-      green: "0x9ecd6f"
-      yellow: "0xe5c463"
-      blue: "0x7accd7"
-      magenta: "0xab9df2"
-      cyan: "0xef9062"
-      white: "0xe3e1e4"
-    bright:
-      black: "0x1a181a"
-      red: "0xf85e84"
-      green: "0x9ecd6f"
-      yellow: "0xe5c463"
-      blue: "0x7accd7"
-      magenta: "0xab9df2"
-      cyan: "0xef9062"
-      white: "0xe3e1e4"
 
 
 # Final Settings ························································ {{{1
