--- a/starship/resources/starship-single-line.toml
+++ b/starship/resources/starship-single-line.toml
@@ -1,4 +1,4 @@
-# File: ~/.config/starship-single-line.toml
+# ~/.config/starship-single-line.toml
 # Author: Dan Murphy
 
 [character]
@@ -9,14 +9,10 @@ disabled = true
 
 [directory]
 truncation_length = 3
-#read_only = " "
 
 [git_branch]
 format = "[$branch]($style) "
 
 [line_break]
 disabled = true
-
-#[python]
-#symbol = " "
 
