Add Sway and some Arch etc files

--- a/Arch system files/etc/pacman.conf
+++ b/Arch system files/etc/pacman.conf
@@ -10,7 +10,7 @@ CacheDir = /home/custompkg/
 HoldPkg = pacman glibc
 Architecture = auto
 CheckSpace
-#CleanMethod = KeepCurrent
+Include = /etc/pacman.d/fonts
 
 SigLevel = Required DatabaseOptional
 LocalFileSigLevel = Optional
@@ -31,7 +31,7 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 Include = /etc/pacman.d/mirrorlist
 
-[custom]
-SigLevel = Optional TrustAll
+#[custom]
+#SigLevel = Optional TrustAll
 #SigLevel = Never
-Server = file:///home/custompkg
+#Server = file:///home/custompkg
